# python_package_test

./: INSTRUCTIONS.md  README.md  build.sh  instructions.txt  pyproject.toml
.github/workflows/: release.yml
calculator/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
